# braw-gyro-stabilizer

./: .gitignore  CMakeLists.txt  README.md  build.sh  package.sh
assets/: logo.icns
cmake/: Info.plist.in
pipl/: BRAWGyroStabilizer.r
shaders/: WarpKernel.metal
src/braw/: BRAWReader.cpp  BRAWReader.h
src/common/: BrawPath.h  DebugLog.h  StatusStore.h
src/gyro/: GyroIntegrator.cpp  GyroIntegrator.h  WarpMap.h
src/plugin/: GPUFilter.mm  PluginMain.cpp  PluginMain.h
src/warp/: MetalWarpEngine.h  MetalWarpEngine.mm
